--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs": "^3.1.9",
     "error-handler": "^1.0.0",
     "express": "^4.18.3",
+    "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
     "nodemon": "^3.1.0",
