--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "dependencies": {
     "async": "^3.2.5",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.9",
     "error-handler": "^1.0.0",
     "express": "^4.18.3",
     "font-awesome": "^4.7.0",
+    "formidable": "^3.5.1",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "zlib": "^1.0.5"
   }
 }
