--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "async": "^3.2.5",
     "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "error-handler": "^1.0.0",
     "express": "^4.18.3",
