--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "zlib": "^1.0.5"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
